get invoice by path parameter
